--- a/components/layout/main/Main.module.css
+++ b/components/layout/main/Main.module.css
@@ -1,3 +1,7 @@
 .container {
-  @apply flex flex-col w-full h-screen bg-black;
+  @apply flex-1 flex-col items-start justify-start w-full bg-black;
+}
+
+.main_section {
+  @apply flex items-center justify-center w-full p-3 relative;
 }
