--- a/components/layout/footer/Footer.module.css
+++ b/components/layout/footer/Footer.module.css
@@ -1,7 +1,8 @@
 .container {
-  @apply flex flex-col w-full p-20 py-24 relative text-[#676767];
+  @apply flex flex-col w-full p-10 py-0 relative text-[#676767] mt-[50px];
 }
 
 .bottom_container {
-  @apply flex w-full items-end justify-between pt-10;
+  @apply flex flex-col w-full items-start justify-center pt-0 pb-12 
+  lg:flex-row lg:justify-between;
 }
