--- a/components/faq/list/FaqList.module.css
+++ b/components/faq/list/FaqList.module.css
@@ -1,3 +1,3 @@
 .container {
-  @apply flex flex-col mt-12 rounded-lg p-1 w-full;
+  @apply flex flex-col mt-12 rounded-lg p-1 w-full lg:w-[80%] 2xl:w-[60%];
 }
