--- a/components/layout/Form/InputField/InputField.module.css
+++ b/components/layout/Form/InputField/InputField.module.css
@@ -7,7 +7,7 @@
 }
 
 .input_label {
-  @apply ml-4 z-[100] text-sm text-inputtextprimary absolute transform duration-200;
+  @apply flex items-start justify-start ml-[34px] z-[100] text-left text-sm text-inputtextprimary absolute transform duration-200;
 }
 
 .input_field {
