feat: hide / show navigation if login or not

--- a/components/layout/navigation/Navigation.module.css
+++ b/components/layout/navigation/Navigation.module.css
@@ -1,3 +1,7 @@
 .container {
   @apply flex flex-1 items-center justify-center p-3 ml-5;
 }
+
+.container_hidden {
+  @apply flex-1 items-center justify-center p-3 ml-5 hidden;
+}
