--- a/components/Layout/Main/Main.module.css
+++ b/components/Layout/Main/Main.module.css
@@ -3,7 +3,7 @@
 }
 
 .main_section {
-  @apply flex items-center justify-center w-full p-3 relative;
+  @apply flex relative items-center justify-center w-full p-3;
 }
 
 .sub_container {
