--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -5,3 +5,11 @@
 .container_hidden {
   @apply flex-1 items-center justify-center p-3 ml-5 hidden;
 }
+
+.navigation {
+  @apply w-full text-white hidden md:flex;
+}
+
+.navigation li {
+  @apply hover:text-yellow-300 cursor-pointer px-4;
+}
