--- a/components/Layout/Header/Header.module.css
+++ b/components/Layout/Header/Header.module.css
@@ -1,9 +1,9 @@
 .container {
-  @apply flex flex-col items-center justify-center w-full text-[#676767] relative z-[2000];
+  @apply flex flex-col items-center justify-center w-full text-[#676767] px-1 relative z-[2000];
 }
 
 .subcontainer {
-  @apply flex items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary opacity-90 ease-out duration-200 transition-all 
+  @apply flex items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary opacity-95 ease-out duration-200 transition-all 
   sm:py-1 sm:px-2
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
@@ -35,3 +35,7 @@
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
 }
+
+/* .overlay {
+  @apply flex items-center justify-center w-full h-screen absolute opacity-[50%] top-0 left-0  bg-red-500 z-[2100];
+} */
