--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -3,13 +3,20 @@
 }
 
 .container_hidden {
-  @apply flex-1 items-center justify-center p-3 ml-5 hidden;
+  @apply flex flex-1 items-center justify-start border w-full;
 }
 
 .navigation {
-  @apply w-full text-white hidden md:flex;
+  @apply hidden items-center justify-start w-full text-white  ml-2 py-2 rounded-md mt-2 space-x-[30px] md:flex;
 }
 
 .navigation li {
-  @apply hover:text-yellow-300 cursor-pointer px-4;
+  @apply flex items-center justify-center hover:text-yellow-300 cursor-pointer space-x-2;
+}
+
+.show_navigation {
+  @apply flex flex-col items-start justify-center absolute w-[200px] text-white mt-2 p-1 bg-gray-500 rounded-md z-[3000];
+}
+.show_navigation li {
+  @apply flex items-center hover:text-yellow-300 cursor-pointer  w-full px-2 py-2 hover:bg-gray-600;
 }
