--- a/components/Search/SearchResults/SearchResults.module.css
+++ b/components/Search/SearchResults/SearchResults.module.css
@@ -1,3 +1,7 @@
 .container {
   @apply flex flex-col items-start justify-center w-full p-5;
 }
+
+.resultlist_container {
+  @apply flex flex-wrap items-start justify-start w-full relative mt-4;
+}
