--- a/components/Layout/Main/Main.module.css
+++ b/components/Layout/Main/Main.module.css
@@ -1,5 +1,9 @@
 .container {
-  @apply flex-col items-center justify-center w-full bg-black;
+  @apply flex-col items-center justify-center w-full bg-black transition-all duration-100 opacity-100;
+}
+
+.container_fadeout {
+  @apply flex-col items-center justify-center w-full bg-black transition-all duration-100 opacity-0;
 }
 
 .main_section {
