--- a/components/Layout/Header/Header.module.css
+++ b/components/Layout/Header/Header.module.css
@@ -3,14 +3,14 @@
 }
 
 .subcontainer {
-  @apply flex items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary opacity-95 ease-out duration-200 transition-all 
+  @apply flex items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary top-0 left-0 ease-out duration-200 transition-all 
   sm:py-1 sm:px-2
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
 }
 
 .subcontainer_scrolled {
-  @apply flex items-center justify-between w-full py-1 px-2 bg-primary fixed top-0 left-0 duration-200 ease-in transition-all z-[2000]
+  @apply flex items-center justify-between w-full py-1 px-2 bg-primary fixed top-0 left-0 duration-200 ease-in transition-all z-[2000] 
   sm:py-1 sm:px-2
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
@@ -21,8 +21,8 @@
 }
 
 .filler_container {
-  @apply hidden items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary opacity-90 ease-out duration-200 transition-all 
-  h-[100px]
+  @apply hidden items-center justify-between w-full py-1 px-2 bg-primary opacity-90 ease-out duration-200 transition-all 
+  h-[96px]
   sm:py-1 sm:px-2
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
@@ -30,7 +30,7 @@
 
 .filler_container_show {
   @apply flex items-center justify-between w-full m-1 py-1 px-2 rounded-md bg-primary opacity-90 ease-out duration-200 transition-all 
-  h-[100px]
+  h-[96px]
   sm:py-1 sm:px-2
   md:py-3 md:px-5
   xl:py-5 xl:px-8;
