--- a/components/Layout/Main/Main.module.css
+++ b/components/Layout/Main/Main.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply flex-col items-center justify-center w-full bg-black transition-all duration-100 opacity-100;
+  @apply flex-col items-center justify-center w-full bg-black transition-all duration-100 opacity-100 overflow-hidden;
 }
 
 .container_fadeout {
