--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply flex flex-1 items-center justify-center p-3 ml-5;
+  @apply flex-1 items-center justify-start w-full pl-2 relative;
 }
 
 .container_hidden {
