--- a/components/Layout/Main/Main.module.css
+++ b/components/Layout/Main/Main.module.css
@@ -11,5 +11,5 @@
 }
 
 .sub_container {
-  @apply flex-col relative items-start justify-start w-full;
+  @apply flex flex-col relative items-start justify-start w-full;
 }
