--- a/components/Layout/Header/Header.module.css
+++ b/components/Layout/Header/Header.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply flex flex-col items-center justify-center w-full text-[#676767] relative px-2 z-[5000] border-0;
+  @apply flex flex-col items-center justify-center w-full text-[#676767] relative px-0 z-[5000] border-0;
 }
 
 .subcontainer {
@@ -19,7 +19,7 @@
 }
 
 .nav_container {
-  @apply flex flex-1 items-center justify-between w-full relative;
+  @apply flex flex-1 items-center justify-between w-full relative px-2;
 }
 
 .filler_container {
