--- a/components/PopularCard/PopularCard.module.css
+++ b/components/PopularCard/PopularCard.module.css
@@ -1,3 +1,3 @@
 .popularcard_container {
-  @apply flex flex-col items-center justify-start w-full relative;
+  @apply flex flex-col items-center justify-start w-full relative border-0;
 }
