--- a/components/Button/CustomBtn/CustomBtn.module.css
+++ b/components/Button/CustomBtn/CustomBtn.module.css
@@ -1,5 +1,5 @@
 .button_container {
-  @apply flex items-center justify-between px-4 py-1 bg-btnprimary rounded-md border-2 border-btnprimary pl-6
+  @apply flex items-center justify-between px-4 py-1 bg-[#25436a] rounded-md border-2 border-[#25436a] pl-6
     w-full
    hover:border-slate-200
    sm:w-max
