--- a/components/LanguageSelector/LanguageSelector.module.css
+++ b/components/LanguageSelector/LanguageSelector.module.css
@@ -1,3 +1,3 @@
 .container {
-  @apply flex items-center justify-center rounded-md bg-[#847E7E] border border-white text-white text-sm p-2 space-x-1 mt-8;
+  @apply flex items-center justify-center rounded-md bg-[#525151] border border-white text-white text-sm p-2 space-x-1 mt-8;
 }
